New pub cpt added, solved bib conflic and updated

--- a/Chapter_pub1.tex
+++ b/Chapter_pub1.tex
@@ -25,8 +25,8 @@
 
 \newpage
 \begin{minipage}{10cm}
-We report on the observation of Feshbach resonances at low magnetic-field strength (below 10 G) in the
-Fermi-Fermi mixture of 161Dy and 40K. We characterize five resonances by measurements of interspecies
+We report on the observation of Feshbach resonances at low magnetic-field strength (below $10$ G) in the
+Fermi-Fermi mixture of $^{161}$Dy and $^{40}$K. We characterize five resonances by measurements of interspecies
 thermalization rates and molecular binding energies. As a case of particular interest for future experiments,
 we consider a resonance at 7.29 G, which combines accurate magnetic tunability and access to the universal
 regime of interactions with experimental simplicity. We show that lifetimes of a few hundred milliseconds can
@@ -225,7 +225,7 @@ In Figure.\,\ref{fig:Hyrodynamic}, we demonstrate the observed hydrodynamic beha
 
 \begin{figure}[thb]
 	\includegraphics[trim=15 10 15 10,clip,width=0.9\columnwidth]{gfx/Pub1_fig/Hyrodynamic0505.pdf}
-	\caption{\label{fig:Hyrodynamic} Absorption images of Dy and K far away from (upper row) and on (lower row) the 7.29-G Feshbach resonance after 4.5\,ms of free expansion. The optical depth of K is significantly enhanced on resonance, while Dy decreases because of the collective expansion. The field of view of all images is \SI{360}{\mu m}$\times$\SI{360}{\mu m}. Each image is an average of five individual shots.}
+	\caption{\label{fig:Hyrodynamic} Absorption images of Dy and K far away from (upper row) and on (lower row) the $7.29$-G Feshbach resonance after \SI{4.5}{ms} of free expansion. The optical depth of K is significantly enhanced on resonance, while Dy decreases because of the collective expansion. The field of view of all images is \SI{360}{\micro m}$\times$\SI{360}{\micro m}. Each image is an average of five individual shots.}
 \end{figure}
 
 To quantitatively analyze the hydrodynamic expansion~\cite{Ravensbergen2020rif}, we explore the central fraction defined as the fraction of K atoms inside a circle with radius $\sqrt{2}\sigma_{\textrm Dy}$. The orange dots in Fig.\,\ref{fig:HydroSimAndExp} show the experimental central fraction as a function of scattering length, which we calculated from Eq.\,(\ref{equ:FeshbachModel}) with a fixed $A=23.2$\,G (see Table~\ref{tab:ParamtersOfFBRs}). Far away from the resonance (at 7.701\,G), we get a central fraction of {0.22} (out of the range of Fig.\,\ref{fig:HydroSimAndExp}) corresponding to the expansion of two non-interacting Gaussian clouds. The central fraction gradually increases to 0.45 as the scattering length increases. The width at half maximum of experimental data is about $|1000a_0/a|=0.68$ from Lorentzian curve fit, which is consistent with our length scale estimated range of $B-B_0\approx\pm15$\,mG.
@@ -236,21 +236,21 @@ To quantitatively analyze the hydrodynamic expansion~\cite{Ravensbergen2020rif},
 	\caption{\label{fig:HydroSimAndExp} Comparison of the central fraction as a function of scattering length obtained from Monte-Carlo simulations (gray open circles) and experiment (orange solid circles). The central fraction is defined as the fraction of K atoms inside $\sqrt{2}\sigma_{\textrm Dy}$ region.}
 \end{figure}
 
-We also perform the same Monte-Carlo simulation as we did for the 217-G resonance~\cite{Ravensbergen2020rif} to extract the central fraction. We take into account the momentum dependence of the resonant collisional cross section, but neglect the small effect of $R^*$. The gray open circles in Fig.~\ref{fig:HydroSimAndExp} show our simulation results as a function of the inverse scattering length. We find that the matching between simulation and experiment is very sensitive to the exact value of the pole position $B_0$. Therefore hydrodynamic expansion allows us to determine the best value of $B_0$ = 7.290\,G with an uncertainty of 2\,mG, which is dominated by magnetic field fluctuations in our system.
+We also perform the same Monte-Carlo simulation as we did for the $217$-G resonance~\cite{Ravensbergen2020rif} to extract the central fraction. We take into account the momentum dependence of the resonant collisional cross section, but neglect the small effect of $R^*$. The gray open circles in Fig.~\ref{fig:HydroSimAndExp} show our simulation results as a function of the inverse scattering length. We find that the matching between simulation and experiment is very sensitive to the exact value of the pole position $B_0$. Therefore hydrodynamic expansion allows us to determine the best value of $B_0$ = $7.290$\,G with an uncertainty of $2$\,mG, which is dominated by magnetic field fluctuations in our system.
 
 As shown in Fig.~\ref{fig:HydroSimAndExp}, the experiment matches well with the simulation in most regions apart from a narrow central part. The good match confirms our value for the strength parameter $A$ obtained from the binding energy and the thermalization measurements (see Table\,\ref{tab:ParametersAt7G}). The value of the pole position here is slightly below the value derived from the binding energy measurements, which we attribute to a systematic error in the binding energy measurements caused by neglecting the small, but finite collision energies in the mixture. 
 This indeed leads to a small overestimation of the binding energies and the fit produces a pole position, which is a few mG too high. Therefore, for the further discussion, we choose $B_0=7.290(2)$\,G as the presumably more accurate pole position.
 
-We notice that the observed central fraction is smaller than the one from the simulation in the resonance range with $|a|\gtrsim3000a_0$, while we did not observe such a deviation in our previous experiments near the broad 217-G resonance~\cite{Ravensbergen2020rif}. We suspect that uncontrolled magnetic field fluctuations of the order of a few mG may have been caused by turning off the levitation gradient when the mixture is released from the trap, which may have reduced the effect of interactions very close to resonance during the free expansion. Obviously, the 7.29-G resonance is much more sensitive to magnetic field fluctuations than the broad 217-G resonance. Apart from this rather technical issue, we observe essentially the same behavior of the hydrodynamic expansion for both resonances.
+We notice that the observed central fraction is smaller than the one from the simulation in the resonance range with $|a|\gtrsim3000a_0$, while we did not observe such a deviation in our previous experiments near the broad $217$-G resonance~\cite{Ravensbergen2020rif}. We suspect that uncontrolled magnetic field fluctuations of the order of a few mG may have been caused by turning off the levitation gradient when the mixture is released from the trap, which may have reduced the effect of interactions very close to resonance during the free expansion. Obviously, the $7.29$-G resonance is much more sensitive to magnetic field fluctuations than the broad $217$-G resonance. Apart from this rather technical issue, we observe essentially the same behavior of the hydrodynamic expansion for both resonances.
 
 We finally note that the expanding clouds in Fig.~\ref{fig:Hyrodynamic} show small anisotropies, which may be related to hydrodynamic behavior and/or the dipole-dipole interacting in the strongly magnetic Dy component. The origin of this effect requires further investigations using more anisotropic trapping schemes than applied in the present work and will be subject of future work.
 
 \subsection{Lifetime and three-body decay}
 \label{sec:Lifetime}
 
-Collisional stability is an important ingredient for deep evaporative cooling of the Dy-K mixture and for future experiments on mass-imbalanced fermionic superfluids~\cite{Gubbels2013ifg,Wang2017eeo,Pini2021bmf}. In Ref.~\cite{Ravensbergen2020rif}, we have reported long lifetimes of the mixture near the 217-G resonance, which we attributed to Pauli suppression of inelastic few-body processes~\cite{Petrov2004wbd,Petrov2005dmi}. Here we study whether we can achieve also comparably long lifetimes near the 7.29-G resonance.
+Collisional stability is an important ingredient for deep evaporative cooling of the Dy-K mixture and for future experiments on mass-imbalanced fermionic superfluids~\cite{Gubbels2013ifg,Wang2017eeo,Pini2021bmf}. In Ref.~\cite{Ravensbergen2020rif}, we have reported long lifetimes of the mixture near the $217$-G resonance, which we attributed to Pauli suppression of inelastic few-body processes~\cite{Petrov2004wbd,Petrov2005dmi}. Here we study whether we can achieve also comparably long lifetimes near the $7.29$-G resonance.
 
-To initiate the measurement, the sample is prepared in a shallow ODT with a mean trap frequency of $\bar{\omega}_{\textrm Dy}=2\pi\times35$\,Hz and $\bar{\omega}_{\textrm K}=2\pi\times128$ Hz, where the initial temperature and atom number of the sample varies slightly for different measurements (see Figs.~\ref{fig:LossfeatureAt7G} and \ref{fig:lifetimeat7G}). The magnetic field is ramped to the target value and the atom numbers are recorded by absorption imaging after holding the mixture in the trap for {a few 100 ms}. 
+To initiate the measurement, the sample is prepared in a shallow ODT with a mean trap frequency of $\bar{\omega}_{\textrm Dy}=2\pi\times35$\,Hz and $\bar{\omega}_{\textrm K}=2\pi\times128$ Hz, where the initial temperature and atom number of the sample varies slightly for different measurements (see Figs.~\ref{fig:LossfeatureAt7G} and \ref{fig:lifetimeat7G}). The magnetic field is ramped to the target value and the atom numbers are recorded by absorption imaging after holding the mixture in the trap for {a few $100$ ms}. 
 
 In Fig.\,\ref{fig:LossfeatureAt7G}(a), we present the loss spectrum for the mixture in a 50-mG wide range, showing both the number of remaining Dy and K atoms. For comparison, in Fig.\,\ref{fig:LossfeatureAt7G}(b), we show the corresponding spectrum for a pure Dy sample, which is expected to show three-body loss features because of the generally very dense spectrum of resonances in fermionic Dy~\cite{Burdick2016lls,Soave2022lff}. The gray dashed line indicates the pole position of the resonance as obtained from the hydrodynamic expansion measurement presented in the preceding section. Figure\,\ref{fig:LossfeatureAt7G}(a) shows a striking ``valley'' for both species, located on the lower side of the resonance. This is about 10\,mG below the pole position, where we estimate a large positive value of the scattering length of $a\approx +2300a_0$. The loss feature appears in both Dy and K and is stronger in Dy by about a factor of two. A similar feature was observed for the 217-G resonance~\cite{Ravensbergen2020rif}, which also resembles observations made in experiments on resonantly interacting spin mixtures of fermions~\cite{Regal2004lom,Bourdel2003mot,Dieckmann2002doa}. We interpret this loss as being due to the formation of weakly bound dimers by three-body recombination and subsequent inelastic atom-dimer collisions. The fact that maximum losses are observed in the regime of weakly bound dimers and not on top of the resonance (as usually observed in bosonic systems) points to the presence of Pauli suppression on resonance. 
 
@@ -346,19 +346,19 @@ Our preparation sequence relies on four stages of optical dipole trapping. We em
 
 \begin{table}[thb]
 	\caption{\label{tab:odtbeams}
-		Trapping beam properties. Waist $w$ and maximum power $P_{\textrm max}$ for each of the four beams. The two RDT (CDT) beams are derived from an Azurlight ALS-IR-1064-5-I-CC-SF (Mephisto MOPA 18 NE) and frequency offset by 160\,MHz (220\,MHz) by acousto-optical modulation.}
+		Trapping beam properties. Waist $w$ and maximum power $P_{\textrm max}$ for each of the four beams. The two RDT (CDT) beams are derived from an Azurlight ALS-IR-$1064$-$5$-I-CC-SF (Mephisto MOPA $18$ NE) and frequency offset by $160$\,MHz ($220$\,MHz) by acousto-optical modulation.}
 	%\begin{ruledtabular}
 	\centering
 		\begin{tabular}{lcccc}
 			\toprule
 			\textrm{Parameter}&
-			\textrm{RDT1}&
-			\textrm{RDT2}&
-			\textrm{CDT1}&
-			\textrm{CDT2}\\
+			\textrm{RDT}$1$&
+			\textrm{RDT}$2$&
+			\textrm{CDT}$1$&
+			\textrm{CDT}$2$\\
 			\hline
-			$w$ ($\mu$m) & 94 & 93 & 24 & 62\\
-			$P_{\textrm max}$ (W) & 12 & 11 & 0.4 & 0.73\\
+			$w$ ($\mu$m) & $94$ & $93$ & $24$ & $62$\\
+			$P_{\textrm max}$ (W) & $12$ & $11$ & $0.4$ & $0.73$\\
 			\bottomrule
 		\end{tabular}
 	%\end{ruledtabular}
@@ -372,28 +372,28 @@ Our preparation sequence relies on four stages of optical dipole trapping. We em
 \end{figure}
 
 
-In the first stage, a large-volume reservoir dipole trap (RDT) facilitates efficient loading of both species from magneto-optical traps. This dipole trap is realized with two high-power infrared beams (labeled RDT1 and RDT2), crossing in the horizontal plane at an angle of $18^\circ$. In a later stage, in which evaporative cooling is performed, we use a crossed-beam dipole trap (CDT) realized with two tightly focused beams. The beam CDT1 propagates horizontally in opposite direction to RDT1, and CDT2 is directed vertically. These two dipole traps (RDT and CDT) for loading and evaporative cooling have been introduced in our previous work~\cite{Ravensbergen2018poa}. For the present work, we have introduced two upgrades:
+In the first stage, a large-volume reservoir dipole trap (RDT) facilitates efficient loading of both species from magneto-optical traps. This dipole trap is realized with two high-power infrared beams (labeled RDT$1$ and RDT$2$), crossing in the horizontal plane at an angle of $18^\circ$. In a later stage, in which evaporative cooling is performed, we use a crossed-beam dipole trap (CDT) realized with two tightly focused beams. The beam CDT1 propagates horizontally in opposite direction to RDT$1$, and CDT$2$ is directed vertically. These two dipole traps (RDT and CDT) for loading and evaporative cooling have been introduced in our previous work~\cite{Ravensbergen2018poa}. For the present work, we have introduced two upgrades:
 
-(1) Between the RDT and the CDT stage, we have implemented an additional stage for narrow-line Doppler cooling of Dy. For this purpose, an elongated trap is realized with beams RDT1 and CDT1.
+(1) Between the RDT and the CDT stage, we have implemented an additional stage for narrow-line Doppler cooling of Dy. For this purpose, an elongated trap is realized with beams RDT$1$ and CDT$1$.
 
-(2) After the CDT stage, the evaporatively cooled mixture is transferred into a shallow dipole trap formed by beams RDT2 and CDT2. This decompresses the sample, facilitates transfer to high magnetic fields with minimized collisional losses, and is used for most of the experiments reported here.
+(2) After the CDT stage, the evaporatively cooled mixture is transferred into a shallow dipole trap formed by beams RDT$2$ and CDT$2$. This decompresses the sample, facilitates transfer to high magnetic fields with minimized collisional losses, and is used for most of the experiments reported here.
 
 \subsection{In-trap narrow-line laser cooling of Dy}\label{sec:appB}
 
-Laser cooling on the narrow 741-nm line of Dy~\cite{Lu2011soa} is carried out as an intermediate step before evaporative cooling. The line is an inner-shell transition ($4f\rightarrow5d$) with a narrow linewidth of 1.8\,kHz. The Doppler temperature of 43\,nK is an order of magnitude lower than the recoil temperature of 213\,nK, which makes it very interesting for deep laser cooling.
+Laser cooling on the narrow $741$-nm line of Dy~\cite{Lu2011soa} is carried out as an intermediate step before evaporative cooling. The line is an inner-shell transition ($4f\rightarrow5d$) with a narrow linewidth of $1.8$\,kHz. The Doppler temperature of $43$\,nK is an order of magnitude lower than the recoil temperature of $213$\,nK, which makes it very interesting for deep laser cooling.
 
-We generate the 741-nm light with an external-cavity diode laser (Moglabs ECDL) locked to a high-finesse cavity. The narrowing of the laser linewidth is achieved by a fast feedback loop acting directly on the diode current (Toptica mFALC 110). We combine the 741-nm cooling light with the 626-nm beams of the magneto-optical trap, using the same polarizations. A magnetic bias field of 230\,mG defines the quantization axis. The saturation intensity of the transition is as low as $0.57\,\mu$W/cm$^2$.
+We generate the $741$-nm light with an external-cavity diode laser (Moglabs ECDL) locked to a high-finesse cavity. The narrowing of the laser linewidth is achieved by a fast feedback loop acting directly on the diode current (Toptica mFALC $110$). We combine the $741$-nm cooling light with the $626$-nm beams of the magneto-optical trap, using the same polarizations. A magnetic bias field of $230$\,mG defines the quantization axis. The saturation intensity of the transition is as low as $0.57\,\mu$W/cm$^2$.
 
-Doppler cooling is carried out in an elongated trap, into which the atoms are transferred from the RDT by adiabatically ramping the power of beam RDT2 down and simultaneously ramping CDT1 up to a power of 300\,mW. The beam RDT1 remains unchanged at a power of 10\,W. The resulting elongated trap geometry with a low atomic density is important to minimize the detrimental effect of re-absorption of scattered photons. After transfer, narrow-line cooling starts with $2.6 \times 10^6$ Dy atoms at a temperature of $\sim 9\,\mu$K.
+Doppler cooling is carried out in an elongated trap, into which the atoms are transferred from the RDT by adiabatically ramping the power of beam RDT2 down and simultaneously ramping CDT$1$ up to a power of $300$\,mW. The beam RDT1 remains unchanged at a power of $10$\,W. The resulting elongated trap geometry with a low atomic density is important to minimize the detrimental effect of re-absorption of scattered photons. After transfer, narrow-line cooling starts with $2.6 \times 10^6$ Dy atoms at a temperature of $\sim 9\,\mu$K.
 
 \begin{figure}[thb]
 	\centering
 	\includegraphics[width=0.9\columnwidth]{gfx/Pub1_fig/741.pdf}
-	\caption{Laser cooling using the narrow 741-nm line. The evolution of temperature and atom number is shown within the 150-ms duration of the cooling process. After 80\,ms (vertical dashed line), the laser parameters are changed to optimize the cooling process (see text).}
+	\caption{Laser cooling using the narrow $741$-nm line. The evolution of temperature and atom number is shown within the $150$-ms duration of the cooling process. After $80$\,ms (vertical dashed line), the laser parameters are changed to optimize the cooling process (see text).}
 	\label{fig:741cooling}
 \end{figure}
 
-In-trap Doppler cooling is carried out in two steps: First, the beam intensity is set to about $6\,\mu$W/cm$^2$. A red laser detuning of 969\,kHz is chosen with respect to the free-space resonance frequency at zero magnetic field, which is larger than light shift introduced by the trap and the Zeeman shift. Figure~\ref{fig:741cooling} shows the evolution of temperature and atom number during the Doppler cooling process. Within 80\,ms (vertical dashed line), the Dy temperature is reduced to 1.7\,$\mu$K, while the number of trapped atoms decreases by roughly a factor of two. We attribute the latter to plain evaporation along the weak axis of the trap. In a second step, we reduce the trap power (RDT1 beam reduced to 1.7\,W within 10\,ms), and we simultaneously decrease the cooling laser detuning and intensity to 532\,kHz and $3\,\mu$W/cm$^2$. Doppler cooling is then continued for 60\,ms, and we finally reach a temperature of $1.2\,\mu$K for $1.6 \times 10^6$ Dy atoms. We found this second Doppler cooling step crucial to accumulate the atoms in the center of the trapping region with maximum overlap with the CDT then used for evaporative cooling.
+In-trap Doppler cooling is carried out in two steps: First, the beam intensity is set to about $6\,\mu$W/cm$^2$. A red laser detuning of $969$\,kHz is chosen with respect to the free-space resonance frequency at zero magnetic field, which is larger than light shift introduced by the trap and the Zeeman shift. Figure~\ref{fig:741cooling} shows the evolution of temperature and atom number during the Doppler cooling process. Within $80$\,ms (vertical dashed line), the Dy temperature is reduced to $1.7$\,$\mu$K, while the number of trapped atoms decreases by roughly a factor of two. We attribute the latter to plain evaporation along the weak axis of the trap. In a second step, we reduce the trap power (RDT$1$ beam reduced to $1.7$\,W within $10$\,ms), and we simultaneously decrease the cooling laser detuning and intensity to $532$\,kHz and $3\,\mu$W/cm$^2$. Doppler cooling is then continued for $60$\,ms, and we finally reach a temperature of $1.2\,\mu$K for $1.6 \times 10^6$ Dy atoms. We found this second Doppler cooling step crucial to accumulate the atoms in the center of the trapping region with maximum overlap with the CDT then used for evaporative cooling.
 
 In a mixture of Dy and K, the K component is not affected by the Dy cooling light and the cooling performance of Dy is not compromised by the presence of K atoms. 
 
