--- a/Chapter_pub2.tex
+++ b/Chapter_pub2.tex
@@ -75,10 +75,10 @@ Stage (1): We apply a 12-ms ramp of the magnetic field gradient from its initial
 Half-way during the ramp, the magnetic field is decreased within \SI{1}{\milli\second} to \SI{7.325}{ G}, about \SI{+50}{\milli G} above the resonance center. 
 
 Stage (2): By magnetic field association \cite{Koehler2006poc, Chin2010fri} we create about \SI{6e3}{} DyK molecules, corresponding to almost 30\%  conversion efficiency. We found the optimal ramp speed to be $\dot{B}=\SI{0.43}{ G/\milli\second}$, which is in the range of typical experiments using Feshbach resonances of similar widths \cite{Chin2010fri}. The 0.4-ms ramp ends at a magnetic detuning of about \SI{-120}{\milli G}, which corresponds to a molecular binding energy of $h\times$\SI{220}{\kilo\hertz}. We identify such a magnetic field as optimal for the purification of the molecular sample in the subsequent stage (3). The second half of the magnetic field sweep are accompanied by an increase of the magnetic field gradient from the magic levitation value to the one required to balance the gravitational force on the molecules at this detuning. For the sake of notation simplicity, we introduce the {molecular levitation gradient} ${B'}_{\textrm{mol}}=m_{\mathrm{mol}}g/\mu_{\mathrm{mol}}$, where $m_{\mathrm{mol}}$ is the molecular mass, $g$ is the gravitational acceleration and $\mu_{\mathrm{mol}}$ is the molecular magnetic moment. Note that $\mu_{\textrm mol}$ and thus ${B'}_{\textrm{mol}}$ are $B$-dependent quantities. At the end of the magnetic field sweep, the sample consists of a three-component mixture made of DyK molecules and unbound Dy and K atoms.
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[%scale=0.4
-	width=0.9\columnwidth
+	width=0.8\columnwidth
 	]{gfx/Pub2_fig/Fig2_ODSpilling_MoreContrast.pdf}
 	\caption{Demonstration of SG purification. After magnetic association, the molecules are held in an very shallow trap, at $B=\SI{7.170}{ G}$. The magnetic field gradient is set to cancel the gravitational force experienced by the molecules, which therefore are kept in the ODT (central cloud, held at a fixed position $z=0$). Dysprosium (at cloud positions $z>0$) and potassium (at cloud positions $z<0$) undergo a vertical acceleration. Each image is the average of four absorption pictures, taken after a variable hold time (plus a fixed expansion time of {\SI{4}{\milli\second}}). The molecular signal corresponds to the dissociated potassium component of the molecular cloud, and has been imaged together with the pure K atoms. The absorption pictures taken of K and Dy have been superposed for presentation purposes.}\label{Fig2:Spilling}
 \end{figure}
@@ -99,7 +99,7 @@ At the end of the sequence, the ODT is switched off. The molecular cloud is let 
 	\caption{Vertical and horizontal size of the molecular cloud as a function of the time of flight $t_{\textrm TOF}$. The sample is let expand at $B=\SI{7.22}{ G}$, upon switching off the magnetic levitation together with the ODT. A fit to the data, assuming a ballistic expansion, yields a vertical and horizontal temperature of \SI{77(6)}{} and \SI{45(3)}{\nano\kelvin}, respectively.
 	}\label{Fig3:Temperature}
 \end{figure}
-The experimental scheme described above provides us with a pure molecular sample of about $N_{\textrm{mol}}=\SI{5e3}{}$ molecules, at a temperature of few tens of \SI{}{\nano\kelvin}. We derive the temperature of the molecular cloud from a time-of-flight expansion (Fig.\,\ref{Fig3:Temperature} \footnote{See Supplemental Material for the data files of all figures}). In this specific set of experiments, the molecules are not dissociated to avoid extra energy from the dissociation, but imaged directly \cite{Duerr2004dou}.  A fit to the data reported in Fig.~\ref{Fig3:Temperature} yields a horizontal and a vertical temperature of \SI{45(3)}{\nano\kelvin} and \SI{77(6)}{\nano\kelvin}, respectively. We attribute the difference in these results to additional excitations caused by the rapid changes of vertical magnetic forces during the ramping process. We indeed observe uncontrolled vertical collective oscillations affecting the expansion, which can result in increased temperatures if measured vertically. The horizontal behavior is free of such effects and the expansion can be fully attributed to the temperature of the sample.
+The experimental scheme described above provides us with a pure molecular sample of about $N_{\textrm{mol}}=\SI{5e3}{}$ molecules, at a temperature of few tens of \SI{}{\nano\kelvin}. We derive the temperature of the molecular cloud from a time-of-flight expansion (Fig.\,\ref{Fig3:Temperature} \footnote{See the \link{https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.5.033117}{Supplemental Material} for the data files of all figures}). In this specific set of experiments, the molecules are not dissociated to avoid extra energy from the dissociation, but imaged directly \cite{Duerr2004dou}.  A fit to the data reported in Fig.~\ref{Fig3:Temperature} yields a horizontal and a vertical temperature of \SI{45(3)}{\nano\kelvin} and \SI{77(6)}{\nano\kelvin}, respectively. We attribute the difference in these results to additional excitations caused by the rapid changes of vertical magnetic forces during the ramping process. We indeed observe uncontrolled vertical collective oscillations affecting the expansion, which can result in increased temperatures if measured vertically. The horizontal behavior is free of such effects and the expansion can be fully attributed to the temperature of the sample.
 
 We are able to directly measure the trap frequencies of the molecules by observing the center of mass oscillations. Assuming typical trapping conditions ($\bar{\omega}=2\pi\times\SI{28}{\hertz}$), we calculate a phase-space density $\mathrm{PSD}=N_{\mathrm{mol}}(\hbar\bar{\omega}/k_BT_{\mathrm{mol}})^3\approx0.14$, about one order of magnitude away from degeneracy. The conditions near quantum degeneracy represent an excellent starting point for further experiments. Comparable values of the PSD have been reached recently in a system of NaCs Bose-Bose Feshbach molecules \cite{Lam2022hps}. While BEC has not yet been reached with bosonic heteronuclear Feshbach samples, quantum degenracy has been obtained in fermionic heteronuclear systems of KRb\cite{Demarco2019adf} and NaK \cite{Duda2023tfa}.
 %\\\textcolor{red}{Shall I make a comment about our main limitations (low transfer efficiency and heating mechanism in the transfer to the high field region)?} 
@@ -143,10 +143,10 @@ In the following two subsections, we report on measurements of the magnetic-fiel
 		Molecular state energy as a function of the magnetic field, measured via modulation of the magnetic field (wiggle spectroscopy). The experimental data have been corrected by the small thermal shift of $\sim\SI{5}{\kilo\hertz}$. Uncertainties are smaller than the symbol size. The solid line is a fit to the data according to Eq.\,(\ref{Eq:BindingEnergy}). The dashed line indicates the position of the resonance pole.
 	}\label{Fig4:Wiggle}
 \end{figure}
-A common method to determine the resonance parameters is based on measuring the molecular binding energy as a function of the magnetic field by magnetic-field (wiggle) modulation spectroscopy \cite{Thompson2005UMP, Donley2002amc, Claussen2003VHP}.
+A common method to determine the resonance parameters is based on measuring the molecular binding energy as a function of the magnetic field by magnetic-field (wiggle) modulation spectroscopy \cite{Thompson2005UMP, Donley2002amc, Claussen2003vhp}.
 
 The mixture is prepared at low magnetic-field strength and transferred in the 7-G region, as described in Sec.\,\ref{SubSec:PrepMixture}. By means of the fast coils, the field is then quickly ramped to the target field below the resonance center. We finally superpose the two clouds, ramping the magnetic field gradient to reach magic levitation conditions. At this point, our sample consists  of {$N_{\mathrm{K}}=\SI{1.5e4}{}$} atoms of potassium and {$N_{\mathrm{Dy}}=\SI{7e4}{}$} atoms of dysprosium at a temperature of about \SI{160}{\nano\kelvin} (for this measurement we do not perform full evaporation).
-We associate the molecules by a sinusoidal modulation of the magnetic field around the bias field. The modulated field is produced by a coil with four loops, which is placed on the top viewport, tilted with respect to the magnetic field, and driven by a radio-frequency (RF) signal generator. Taking into account the relative kinetic energy $E_{\mathrm{kin}}$ of the thermal motion of an atom pair, the association of a dimer happens when the resonance condition $hf_{\mathrm{mod}}=-E_{\mathrm{mol}}+E_{\mathrm{kin}}$ is fulfilled \cite{Hanna2007AOM,Weber2008aou,Mohapatra2015HAS}, and manifests itself in atomic loss. With a cloud temperature $T$ of about \SI{150}{\nano\kelvin}, the average relative kinetic energy of the pairs translates into a small thermal frequency shift $(3/2)k_BT/h$ of about \SI{5}{\kilo\hertz}.
+We associate the molecules by a sinusoidal modulation of the magnetic field around the bias field. The modulated field is produced by a coil with four loops, which is placed on the top viewport, tilted with respect to the magnetic field, and driven by a radio-frequency (RF) signal generator. Taking into account the relative kinetic energy $E_{\mathrm{kin}}$ of the thermal motion of an atom pair, the association of a dimer happens when the resonance condition $hf_{\mathrm{mod}}=-E_{\mathrm{mol}}+E_{\mathrm{kin}}$ is fulfilled \cite{Hanna2007AOM,Weber2008aou,Mohapatra2015has}, and manifests itself in atomic loss. With a cloud temperature $T$ of about \SI{150}{\nano\kelvin}, the average relative kinetic energy of the pairs translates into a small thermal frequency shift $(3/2)k_BT/h$ of about \SI{5}{\kilo\hertz}.
 The strength and the duration of the modulation are adjusted in order to optimize the signal, the width and amplitude of which depend on the measurement. A Gaussian fit to the loss features yields widths (2 standard deviations) of 10 to \SI{20}{\kilo\hertz} and amplitudes ranging from 30 to 100\% of the atom number of the minority component (potassium).
 In Fig.\,\ref{Fig4:Wiggle} we plot the binding energies measured as a function of the magnetic field. The data are fitted with Eq.\,(\ref{Eq:BindingEnergy}).
 The fit results for the resonance parameters $B_0,\ \delta B^*$ and $\delta\mu$ are reported in Table \,\ref{Table:FBParameter} and discussed in Sec.\,\ref{SubSec:FBParametersDiscussion}.
@@ -163,7 +163,7 @@ As for all the other measurements reported in this article, the magnetic field i
 	\caption{Differential magnetic moment of the molecules as a function of the magnetic field. The magnetic moment is measured by determining the perfect magnetic field gradient that balances the gravitational force at the given magnetic field. The solid line is a fit to the data according to Eq.\,(\ref{Eq:MagneticMoment}). The dashed line indicates the position of the resonance pole.
 	}\label{Fig5:MagneticMoment}
 \end{figure}
-Applying an alternative method, we determine the resonance parameters by magnetic moment spectroscopy \cite{Herbig2003poa, Mark2007SOU}. 
+Applying an alternative method, we determine the resonance parameters by magnetic moment spectroscopy \cite{Herbig2003poa, Mark2007sou}. 
 The molecules are prepared as described in Sec.\,\ref{Sec:PreparationSection}. After the SG purification phase, we ramp the magnetic field to the target field. The magnetic field gradient is ramped accordingly to always allow the molecules to stay in the trap. At the target field we hold the molecules for \SI{4}{\milli\second} and then switch off the ODT. Both the magnetic field and the magnetic field gradient remain unchanged. We observe the vertical position of the molecular cloud during the expansion and determine the magnetic field gradient that perfectly compensates the gravitational force. The magnetic field gradient is calibrated performing corresponding measurements on Dy alone, the magnetic moment of which is well known ($\mu_{\mathrm{Dy}}=10\mu_B$, where $\mu_B$ is the Bohr magneton). 
 In Fig.\,\ref{Fig5:MagneticMoment} we plot the differential molecular magnetic moment $\delta\mu_{\mathrm{mol}}$ as a function of the magnetic field strength, the magnetic moment $\mu_{\mathrm{K}}$ of potassium being $1\mu_B$. We fit the experimental data with Eq.\,(\ref{Eq:MagneticMoment}).
 The parameter values derived from the fit are reported in Table \ref{Table:FBParameter}.
@@ -285,13 +285,13 @@ The stability of the molecular cloud against losses is of primary importance for
 
 The molecular sample is prepared as described in Sec.\,\ref{Sec:PreparationSection}. At the end of the purification phase, the cloud is transferred to the target field and the magnetic gradient is ramped accordingly. The molecules are held in the ODT for a variable time, after which they are released and let expand in time of flight. The molecules are dissociated \SI{1}{\milli\second} before the imaging pulse. %Information on the molecular cloud are retrieved from the absorption image of the dissociated potassium component.
 Typical decay curves can be observed in Fig.\,\ref{Fig7:Lifetime}(a) and (b), measured in a rather shallow trap ($\bar{\omega}\approx 2\pi\times\SI{20}{\hertz}$) at $B=\SI{7.248}{}$ and \SI{6.895}{ G}, respectively. 
-The decay follows a simple exponential behavior, suggesting that the limiting loss process is a one-body mechanism. As the only plausible explanation, we assume that the infrared light of the ODT induces transitions into electronically excited molecular states \cite{Partridge2005MPO}. 
+The decay follows a simple exponential behavior, suggesting that the limiting loss process is a one-body mechanism. As the only plausible explanation, we assume that the infrared light of the ODT induces transitions into electronically excited molecular states \cite{Partridge2005mpo}. 
 
 The magnetic field detuning clearly has an impact on the lifetime of the sample: For the smaller detuning we measure a decay time almost two times longer than for the larger detuning.
 We systematically investigate the dependence of the lifetime on the magnetic field. The decay times $\tau$ reported in Fig.\,\ref{Fig7:Lifetime}(c) are derived from exponential fits to the corresponding lifetime curves. All curves have been recorded under essentially the same trapping conditions as for Figs.\,\ref{Fig7:Lifetime}(a) and (b), with an initial molecular number varying between 5 and \SI{6e3}{}.
 At large detunings the sample features a relatively fast decay, with $\tau\approx\SI{12}{\milli\second}$. The lifetime of the sample rapidly increases when approaching the pole of the resonance, reaching decay times up to $\tau=\SI{23}{\milli\second}$ for a magnetic field detuning of about \SI{30}{\milli G}.
 
-To explain the behavior we assume that the closed-channel fraction of the Feshbach molecules is responsible for the losses \cite{Partridge2005MPO}. The optical excitation presumably couples the closed channel to some unknown electronically excited molecular states.     
+To explain the behavior we assume that the closed-channel fraction of the Feshbach molecules is responsible for the losses \cite{Partridge2005mpo}. The optical excitation presumably couples the closed channel to some unknown electronically excited molecular states.     
 %In this range of magnetic field ($|\delta B|>\SI{30}{\milli G}$), the behavior of $\tau$ qualitatively resembles the one of the inverse of the closed channel fraction, $1/Z(B)$. 
 %This analogy further sustains the hypothesis that the mechanism underlying the losses implies the promotion of a molecule from its ground state to an excited one. Indeed, the photoexcitation rate $1/\tau$ is expected to be \cite{Partridge2005MPO}:
 %\begin{equation}\label{EqPhotoexcitationRate}
