--- a/Chapter_pub3.tex
+++ b/Chapter_pub3.tex
@@ -238,7 +238,7 @@ After a variable hold time, in which the dynamics of interest takes place, we tu
 
 Inelastic losses, reducing the number of trapped atoms during the hold time in the trap, generally stay well below a few 10\% and have a weak effect on the oscillation curves. Only in a narrow range (few mG wide) very close to the center of the resonance, we have observed faster losses. In the worst case, we have measured lifetimes in the mixture of about 150\,ms for Dy and 50\,ms for the K component. 
 
-Typical oscillation signals are shown in Fig.~\ref{fig:Oscillation} (See ancillary file on ) for increasing strength of the interspecies interaction. The observed behavior follows the basic predictions of the model introduced in Sec.~\ref{sec:modespectrum}. For the non-interacting case (a), both species oscillate independently at their individual trap frequencies. In this collisionless regime, damping due to interspecies interaction is essentially absent. Weak residual damping may be attributed to trap imperfections, such as anharmonicities.
+Typical oscillation signals are shown in Fig.~\ref{fig:Oscillation} (see also Supplemental Material\footnote{See Supplemental Material at the following \link{https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.7.023259}{link}}) for increasing strength of the interspecies interaction. The observed behavior follows the basic predictions of the model introduced in Sec.~\ref{sec:modespectrum}. For the non-interacting case (a), both species oscillate independently at their individual trap frequencies. In this collisionless regime, damping due to interspecies interaction is essentially absent. Weak residual damping may be attributed to trap imperfections, such as anharmonicities.
 When approaching the resonance, the observed oscillations in (b) and (c) reveal increasing interaction effects. While both components show collisional damping, the K signal also reveals the emergence of two frequency components, which we interpret as a superposition of the K mode with the Dy crossover mode. In our experiments, the K component generally shows much stronger interaction effects because of the much larger total mass of the Dy cloud ($161 N_{\textrm Dy}/40 N_{\textrm K}\approx 10$). For the strongest interaction, realized on top of the resonance (d), we observe the expected locked hydrodynamic oscillation, in which both species oscillate jointly together with a well-defined frequency according to Eq.~(\ref{eq:lockedfreq}). In the regime of strong interactions, damping becomes weaker with increasing interaction, which confirms a central prediction pointed out in Sec.~\ref{sec:modespectrum} for the Dy crossover mode. 
 
 The on-resonance oscillation curves in Fig.~\ref{fig:Oscillation}(d) reveal another interesting feature. The two curves overlap almost perfectly, owing to the locked hydrodynamic oscillation of the two species in the Dy crossover mode, except for an initial transient in the first millisecond. This is a signature of the fast damping mode, as we will discuss in detail in Sec.~\ref{sec:dampingmodes}. 
@@ -303,7 +303,7 @@ and temperatures $T \approx 100\,$nK.
 The 30 recorded curves (per species) cover an interaction parameter range of $-6 \le x \le +6$ ($|a| \ge 167\,a_0$). Each curve consists of 90 data points with 3 to 5 repetitions taken in a time interval of \SI{70}{ms} after the excitation by a double-pulse sequence. To get a first impression of the mode spectrum, we carried out a fast Fourier transform (FFT) for each curve and visualize the resonance behavior of the amplitude spectrum in the pseudo-color plots of Fig.~\ref{fig:FFTsignal}, where panel (a) refers to the signal obtained from the K component and (b) from the Dy component.
 
 Already the simple FFT analysis demonstrates the essential features of the mode spectrum across resonance. In the K signal (a), we can identify both modes with their bare frequencies of 177\,Hz and 59\,Hz in the weakly interacting regime. 
-On resonance, only the locked oscillation ($\sim$78\,Hz) is observed. In the Dy signal (b), the off-resonant K mode excitation is too weak to be observed in the data, but the resonant crossover to the locked mode can be clearly seen.
+On resonance, only the locked oscillation ($\sim78$\,Hz) is observed. In the Dy signal (b), the off-resonant K mode excitation is too weak to be observed in the data, but the resonant crossover to the locked mode can be clearly seen.
 %In Fig.~\ref{fig:FFTsignal},
 %In Fig.~\ref{fig:FFTsignal}, 
 For comparison,
