--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -105,6 +105,7 @@
 \part{Making, probing, and understanding D\lowercase{y}K Feshbach molecules}\label{pt:MakingProbing}
 \include{Chapters/Cpt7_intro_feshbach_mol}
 \include{Chapters/Chapter_pub2}
+\include{Chapters/Chapter_pub4}
 
 
 %\part{When atoms collide a lot: Hydrodynamic crossover}
