--- a/ultracold.bib
+++ b/ultracold.bib
@@ -11908,7 +11908,6 @@ V.N. Sorokin and N.N. Kolachevsky},
   Year                     = {2008},
   Pages                    = {223},
   Volume                   = {4},
-
   Owner                    = {Rudi},
   Timestamp                = {2009.04.03}
 }
@@ -15865,7 +15864,7 @@ and Windpassinger, Patrick},
   pages   = {020404},
   volume  = {95},
   doi     = {10.1103/PhysRevLett.95.020404},
-  owner   = {Rudi},
+  owner   = {Rudi}
 }
 
 @Article{Pashov2007cot,
@@ -24923,4 +24922,292 @@ and Windpassinger, Patrick},
 0 AllEntriesGroup:;
 1 StaticGroup:Markings\;2\;1\;\;\;\;;
 2 StaticGroup:[LevT:]\;2\;1\;\;\;\;;
+}
+
+
+@Article{Kasahara1999dfo,
+	author = {Kasahara, Shunji and Fujiwara, Chizuru and Okada, Naoko and Katô, Hajime and Baba, Masaaki},
+	title = {Doppler-free optical–optical double resonance polarization spectroscopy of the $^{39}\mathrm{K}^{85}\mathrm{Rb}$ $1^1\mathrm{\Pi}$ and 2$^1\mathrm{\Pi}$ states},
+	journal = {J. Chem. Phys.},
+	volume = {111},
+	number = {19},
+	pages = {8857-8866},
+	year = {1999},
+	month = {11},
+	issn = {0021-9606},
+	doi = {10.1063/1.480256},
+	url = {https://doi.org/10.1063/1.480256},
+}
+
+
+@article{Guo2017hrm,
+	title = {High-resolution molecular spectroscopy for producing ultracold absolute-ground-state $^{23}\mathrm{Na}^{87}\mathrm{Rb}$ molecules},
+	author = {Guo, Mingyang and Vexiau, Romain and Zhu, Bing and Lu, Bo and Bouloufa-Maafa, Nadia and Dulieu, Olivier and Wang, Dajun},
+	journal = {Phys. Rev. A},
+	volume = {96},
+	issue = {5},
+	pages = {052505},
+	numpages = {13},
+	year = {2017},
+	month = {Nov},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevA.96.052505},
+	url = {https://link.aps.org/doi/10.1103/PhysRevA.96.052505}
+}
+
+
+@misc{Wolswijk2025tma,
+	title={Trapping, manipulating and probing ultracold atoms: a quantum technologies tutorial}, 
+	author={Louise Wolswijk and Luca Cavicchioli and Giuseppe Vinelli and Mauro Chiarotti and Ludovica Donati and Marcia Frometa Fernandez and Diego Hernández Rajkov and Christian Mancini and Paolo Vezio and Tianwei Zhou and Giulia Del Pace and Chiara Mazzinghi and Nicolò Antolini and Leonardo Salvi and Vladislav Gavryusev},
+	year={2025},
+	eprint={2510.20790},
+	archivePrefix={arXiv},
+	primaryClass={cond-mat.quant-gas},
+	url={https://arxiv.org/abs/2510.20790}, 
+}
+
+@misc{Shi2025bec,
+	title={Bose-Einstein condensate of ultracold sodium-rubidium molecules with tunable dipolar interactions}, 
+	author={Zhaopeng Shi and Zerong Huang and Fulin Deng and Wei-Jian Jin and Su Yi and Tao Shi and Dajun Wang},
+	year={2025},
+	eprint={2508.20518},
+	archivePrefix={arXiv},
+	primaryClass={cond-mat.quant-gas},
+	url={https://arxiv.org/abs/2508.20518}, 
+}
+
+
+
+@Article{Zaccanti2022mif,
+	author  = {M. Zaccanti},
+	journal = {in Ref.~\cite{Varenna2022book}},
+	title   = {{Mass-imbalanced Fermi mixtures with resonant interactions}},
+	year    = {2025},
+}
+
+
+@Article{Chu1986eoo,
+	author    = {Chu, Steven and Bjorkholm, J. E. and Ashkin, A. and Cable, A.},
+	journal   = {Phys. Rev. Lett.},
+	title     = {Experimental Observation of Optically Trapped Atoms},
+	year      = {1986},
+	month     = {Jul},
+	pages     = {314--317},
+	volume    = {57},
+	doi       = {10.1103/PhysRevLett.57.314},
+	issue     = {3},
+	numpages  = {0},
+	publisher = {American Physical Society},
+}
+
+
+@Article{Yang2025cbb,
+	author    = {Yang, Y. A. and Miklos, Maya and Tso, Yee Ming and Kraus, Stella and Hur, Joonseok and Ye, Jun},
+	journal   = {Phys. Rev. Lett.},
+	title     = {Clock Precision beyond the Standard Quantum Limit at ${10}^{\ensuremath{-}18}$ Level},
+	year      = {2025},
+	month     = {Nov},
+	pages     = {193202},
+	volume    = {135},
+	doi       = {10.1103/6v93-whwq},
+	issue     = {19},
+	numpages  = {7},
+	publisher = {American Physical Society},
+}
+
+@Article{Zheng2022mot,
+	author    = {Zheng, T. A. and Yang, Y. A. and Wang, S.-Z. and Singh, J. T. and Xiong, Z.-X. and Xia, T. and Lu, Z.-T.},
+	journal   = {Phys. Rev. Lett.},
+	title     = {Measurement of the Electric Dipole Moment of $^{171}\mathrm{Yb}$ Atoms in an Optical Dipole Trap},
+	year      = {2022},
+	month     = {Aug},
+	pages     = {083001},
+	volume    = {129},
+	doi       = {10.1103/PhysRevLett.129.083001},
+	issue     = {8},
+	numpages  = {6},
+	publisher = {American Physical Society},
+}
+
+
+@Article{Thekkeppatt2025mot,
+	author    = {Thekkeppatt, Premjith and Digvijay and Urech, Alexander and Schreck, Florian and van Druten, Klaasjan},
+	journal   = {Phys. Rev. Lett.},
+	title     = {Measurement of the $g$ Factor of Ground-State $^{87}\mathrm{Sr}$ at the Parts-per-Million Level Using Co-Trapped Ultracold Atoms},
+	year      = {2025},
+	month     = {Nov},
+	pages     = {193001},
+	volume    = {135},
+	doi       = {10.1103/cjks-9hlp},
+	issue     = {19},
+	numpages  = {8},
+	publisher = {American Physical Society},
+}
+
+@Article{Browaeys2020mbp,
+	author    = {Browaeys, Antoine and Lahaye, Thierry},
+	journal   = {Nat. Phys.},
+	title     = {{Many-body physics with individually controlled Rydberg atoms}},
+	year      = {2020},
+	number    = {2},
+	pages     = {132--142},
+	volume    = {16},
+	doi       = {10.1038/s41567-019-0733-z},
+	publisher = {Nature Publishing Group UK London},
+}
+
+
+@Article{Kaufman2021qsw,
+	author  = {Kaufman, Adam M. and Ni, Kang-Kuen},
+	journal = {Nat. Phys.},
+	title   = {{Quantum science with optical tweezer arrays of ultracold atoms and molecules}},
+	year    = {2021},
+	number  = {12},
+	pages   = {1324--1333},
+	volume  = {17},
+	doi     = {10.1038/s41567-021-01357-2},
+}
+
+@Article{Anand2024ads,
+	author    = {Anand, Shraddha and Bradley, Conor E and White, Ryan and Ramesh, Vikram and Singh, Kevin and Bernien, Hannes},
+	journal   = {Nat. Phys.},
+	title     = {{A dual-species Rydberg array}},
+	year      = {2024},
+	number    = {11},
+	pages     = {1744--1750},
+	volume    = {20},
+	doi       = {10.1038/s41567-024-02638-2},
+	publisher = {Nature Publishing Group UK London},
+}
+
+@Article{Gruen2024ota,
+	author    = {Gr\"un, D. S. and White, S. J. M. and Ortu, A. and Di Carli, A. and Edri, H. and Lepers, M. and Mark, M. J. and Ferlaino, F.},
+	journal   = {Phys. Rev. Lett.},
+	title     = {{Optical Tweezer Arrays of Erbium Atoms}},
+	year      = {2024},
+	month     = {Nov},
+	pages     = {223402},
+	volume    = {133},
+	doi       = {10.1103/PhysRevLett.133.223402},
+	issue     = {22},
+	numpages  = {7},
+	publisher = {American Physical Society},
+}
+
+@Article{Bigagli2024oob,
+	author  = {Niccolo Bigagli and Weijun Yuan and Siwei Zhang and Boris Bulatovic and Tijs Karman and Ian Stevenson and Sebastian Will},
+	journal = {Nature (London)},
+	title   = {{Observation of Bose–Einstein condensation of dipolar molecules}},
+	year    = {2024},
+	pages   = {289--293},
+	volume  = {631},
+	doi     = {10.1038/s41586-024-07492-z},
+}
+
+
+@Article{Cairncross2021aoa,
+	author    = {Cairncross, William B. and Zhang, Jessie T. and Picard, Lewis R. B. and Yu, Yichao and Wang, Kenneth and Ni, Kang-Kuen},
+	journal   = {Phys. Rev. Lett.},
+	title     = {Assembly of a Rovibrational Ground State Molecule in an Optical Tweezer},
+	year      = {2021},
+	month     = {Mar},
+	pages     = {123402},
+	volume    = {126},
+	doi       = {10.1103/PhysRevLett.126.123402},
+	issue     = {12},
+	numpages  = {6},
+	publisher = {American Physical Society},
+}
+
+
+@Article{Ruttley2023fou,
+	author    = {Ruttley, Daniel K. and Guttridge, Alexander and Spence, Stefan and Bird, Robert C. and Le Sueur, C. Ruth and Hutson, Jeremy M. and Cornish, Simon L.},
+	journal   = {Phys. Rev. Lett.},
+	title     = {Formation of Ultracold Molecules by Merging Optical Tweezers},
+	year      = {2023},
+	month     = {May},
+	pages     = {223401},
+	volume    = {130},
+	doi       = {10.1103/PhysRevLett.130.223401},
+	issue     = {22},
+	numpages  = {7},
+	publisher = {American Physical Society},
+}
+
+
+
+@Article{Anderegg2019aot,
+	author  = {Loïc Anderegg and Lawrence W. Cheuk and Yicheng Bao and Sean Burchesky and Wolfgang Ketterle and Kang-Kuen Ni and John M. Doyle},
+	journal = {Science},
+	title   = {An optical tweezer array of ultracold molecules},
+	year    = {2019},
+	pages   = {1156--1158},
+	volume  = {365},
+	doi     = {10.1126/science.aax1265},
+}
+
+@Article{Vilas2024aot,
+	author  = {Nathaniel B. Vilas and Paige Robichaud and Christian Hallas and Grace K. Li and Loic Anderegg and John M. Doyle},
+	journal = {Nature (London)},
+	title   = {An optical tweezer array of ultracold polyatomic molecules},
+	year    = {2024},
+	pages   = {282-286},
+	volume  = {628},
+	doi     = {10.1038/s41586-024-07199-1},
+}
+
+@Article{Ye2025dms,
+	author    = {Ye, Zhu-Xiong and Canali, Alberto and Wong, Chun-Kit and Kreyer, Marian and Kirilov, Emil and Grimm, Rudolf},
+	journal   = {Phys. Rev. Res.},
+	title     = {Dipole-mode spectrum and hydrodynamic crossover in a resonantly interacting two-species fermion mixture},
+	year      = {2025},
+	month     = {Jun},
+	pages     = {023259},
+	volume    = {7},
+	doi       = {10.1103/PhysRevResearch.7.023259},
+	issue     = {2},
+	numpages  = {19},
+	publisher = {American Physical Society},
+}
+
+@Article{Warner2023ept,
+	author    = {Warner, Claire and Bigagli, Niccolò and Lam, Aden Z and Yuan, Weijun and Zhang, Siwei and Stevenson, Ian and Will, Sebastian},
+	journal   = {New J. Phys.},
+	title     = {{Efficient pathway to NaCs ground state molecules}},
+	year      = {2023},
+	month     = {jun},
+	number    = {5},
+	pages     = {053036},
+	volume    = {25},
+	doi       = {10.1088/1367-2630/acd411},
+	publisher = {IOP Publishing},
+}
+
+@Article{Zuchowski2014gae,
+	author    = {\ifmmode \dot{Z}\else \.{Z}\fi{}uchowski, Piotr S. and Gu\'erout, R. and Dulieu, O.},
+	journal   = {Phys. Rev. A},
+	title     = {Ground- and excited-state properties of the polar and paramagnetic RbSr molecule: A comparative study},
+	year      = {2014},
+	month     = {Jul},
+	pages     = {012507},
+	volume    = {90},
+	doi       = {10.1103/PhysRevA.90.012507},
+	issue     = {1},
+	numpages  = {11},
+	publisher = {American Physical Society},
+}
+
+@article{Mohapatra2015has,
+	title = {Harmonic and subharmonic association of universal dimers in a thermal gas},
+	author = {Mohapatra, Abhishek and Braaten, Eric},
+	journal = {Phys. Rev. A},
+	volume = {92},
+	issue = {1},
+	pages = {013425},
+	numpages = {16},
+	year = {2015},
+	month = {Jul},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevA.92.013425},
+	url = {https://link.aps.org/doi/10.1103/PhysRevA.92.013425}
 }
